# restart-controller

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
deploy/: deployment.yaml  rbac.yaml
deploy/examples/: chain.yaml
scripts/: cleanup-k3d.sh  setup-k3d.sh  test-e2e.sh
src/restart_controller/: __init__.py  dependency_tree.py  logging_config.py  main.py  pod_watcher.py  restart_manager.py  watcher.py
tests/: test_dependency_tree.py  test_main.py  test_pod_watcher.py  test_restart_manager.py
