[project]
name = "restart-controller"
version = "0.1.0"
description = "Kubernetes Pods restart controller with dependency synchronization"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=31.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
